opam-version: "2.0"
name: "yices2_bindings"
version: "0.2"
synopsis: "Ocaml bindings for yices2"
description: "Ocaml bindings for yices2"
maintainer: "Stephane Graham-Lengrand <stephane.graham-lengrand@csl.sri.com>"
authors: "Stephane Graham-Lengrand <stephane.graham-lengrand@csl.sri.com>"
license: "GPLv3"
homepage: "https://github.com/SRI-CSL/yices2_ocaml_bindings"
bug-reports: "https://github.com/SRI-CSL/yices2_ocaml_bindings/issues"
depends: [
  "ocaml" {>= "4.12"}
  "dune" {build & >= "3.7.0"}
  "ocamlfind" {build}
  "containers"  {>= "3.0.0"}
  "ppx_deriving"
  "sexplib"
  "sexplib0"
  "ctypes"
  "ctypes-zarith"
  "dmap"
#  "libpoly_bindings" # commenting out until on opam
]
build: [
  make
]
install: [
  make "install"
]
