opam-version: "2.0"
name: "yices2_bindings"
synopsis: "Ocaml bindings for yices2"
description: "Ocaml bindings for yices2"
maintainer: "Stephane Graham-Lengrand <stephane.graham-lengrand@csl.sri.com>"
authors: "Stephane Graham-Lengrand <stephane.graham-lengrand@csl.sri.com>"
license: "GPLv3"
homepage: "https://github.com/SRI-CSL/yices2_ocaml_bindings"
bug-reports: "https://github.com/SRI-CSL/yices2_ocaml_bindings/issues"
depends: [
  "ocaml" {>= "4.08" & < "4.09"}
  "ocamlbuild"
  "ocamlfind"
  "ctypes"
  "ctypes-foreign"
  "ppx_deriving"
  "sexplib"
  "sexplib0"
#  "ctypes-of-clang"
]
build: [
  "ocamlbuild" "-use-ocamlfind" "src/yices2_bindings.cma" "src/yices2_bindings.cmxa"
]
install: [
  "ocamlfind" "install" "yices2_bindings" "src/META"
  "_build/src/yices2_header.cmx" "_build/src/yices2_low_types.cmx" "_build/src/yices2_high_types.cmx" "_build/src/yices2_low.cmx" "_build/src/yices2_high.cmx" "_build/src/yices2_SMT2.cmx"
  "_build/src/yices2_header.cmo" "_build/src/yices2_low_types.cmo" "_build/src/yices2_high_types.cmo" "_build/src/yices2_low.cmo" "_build/src/yices2_high.cmo" "_build/src/yices2_SMT2.cmo"
  "_build/src/yices2_header.cmi" "_build/src/yices2_low_types.cmi" "_build/src/yices2_high_types.cmi" "_build/src/yices2_low.cmi" "_build/src/yices2_high.cmi" "_build/src/yices2_SMT2.cmi"
  "_build/src/yices2_bindings.cma"
  "_build/src/yices2_bindings.cmxa"
  "_build/src/yices2_bindings.a"
]
remove: [
  "ocamlfind" "remove" "yices2_bindings"
]
