(rule
 (targets verif)
 (action (progn (run ./discover.exe) (write-file verif "GMP status verified"))))

(library
 (name config)
 (package yices2)
 (synopsis "Config for Yices2 bindings")
 (libraries (select gmp.mlh from
              (ctypes-zarith -> gmp.yes.mlh)
              (-> gmp.no.mlh)))
 (modules)
)

(executable
 (name discover)
 (libraries dune-configurator
            (select gmp.ml from
              (ctypes-zarith -> gmp.yes.ml)
              (-> gmp.no.ml))))
