(rule
 (targets gmp.mlh)
 (deps (:gmp ../config/gmp.mlh))
 (mode (promote (until-clean)))
 (action (copy %{gmp} %{targets})))

(library
 (name yices2)
 (public_name yices2)
 (libraries ctypes ctypes.foreign sexplib containers libpoly_bindings config)
 (flags (:standard -cclib -lyices -ccopt "$LDFLAGS"))
 (preprocess (pps ppx_deriving.std ppx_optcomp))
 (synopsis "Yices2 bindings")

(ctypes
    (external_library_name yices)
    (build_flags_resolver (vendored (c_flags ) (c_library_flags )))
    (headers (include "gmp.h" "poly/poly.h" "yices.h"))
    (type_description
      (instance Type)
      (functor Ctypes_type_description))
    (function_description
      (instance Function)
      (functor Ctypes_function_description)
      )
    (generated_entry_point Ctypes_bindings)
    )
)

(env (dev
        (flags (:standard -warn-error -A))))
