(rule
 (targets c_flags.sexp c_library_flags.sexp c_flags.lines ppx_optcomp_cookie.lines)
 (deps (alias ../vendor_deps)
       (:discover ../src_config/discover.exe))
 (action (run %{discover} -system %{ocaml-config:system}
               -vendor-root %{workspace_root}
               -vendor-prefix ../vendor_install
               -pkg gmp gmp
               -pkg yices yices
               -optcomp-cookie ppx_optcomp_cookie.lines)))

(library
 (name yices2)
 (public_name yices2)
 (libraries ctypes sexplib containers libpoly funptr)
 (flags (:standard -w -27))
 (modules_without_implementation yices2)
 (preprocess (pps ppx_deriving.std ppx_optcomp -- %{read-lines:ppx_optcomp_cookie.lines}))
 (synopsis "Yices2 bindings")
 (ctypes
    (external_library_name yices)
    (build_flags_resolver (vendored (c_flags (:include c_flags.sexp)) (c_library_flags (%{env:LDFLAGS=} "-w" (:include c_library_flags.sexp)))))
    (headers (include "gmp.h" "poly/poly.h" "yices.h"))
    (type_description
      (instance Type)
      (functor Ctypes_type_description))
    (function_description
      (instance Function)
      (functor Ctypes_function_description)
      )
    (generated_entry_point Ctypes_bindings)
    )
)

(env (dev (flags (:standard -warn-error -A))))
