(rule
 (targets gmp.mlh)
 (deps (:gmp ../config/gmp.mlh))
 (mode (promote (until-clean)))
 (action (copy %{gmp} %{targets})))
 
(executable
 (name yices_smt2)
 (public_name yices_smt2)
 (libraries ctypes sexplib containers yices2)
 (flags (:standard -cclib -lyices -ccopt "$LDFLAGS"))
 (preprocess (pps ppx_deriving.std ppx_optcomp))
 (promote (until-clean) (into ".."))
)

(env (dev
        (flags (:standard -warn-error -A))))
