(rule
 (targets gmp.mlh)
 (deps (:gmp ../config/gmp.mlh))
 (mode (promote (until-clean)))
 (action (copy %{gmp} %{targets})))
 
(test
 (name test)
 (libraries ctypes ctypes.foreign sexplib containers bindings)
 (flags (:standard -open Bindings -cclib -lyices))
 (preprocess (pps ppx_deriving.std ppx_optcomp))
)

(env (dev
        (flags (:standard -warn-error -A))))
