(rule
 (targets gmp.mlh)
 (deps (:gmp ../config/gmp.mlh))
 (mode (promote (until-clean)))
 (action (copy %{gmp} %{targets})))
 
(test
 (name test)
 (libraries ctypes ctypes.foreign sexplib containers libpoly_bindings yices2)
 (flags (:standard -cclib -lyices -ccopt "$LDFLAGS"))
 (preprocess (pps ppx_deriving.std ppx_optcomp))
)

(env (dev
        (flags (:standard -warn-error -A))))
