(rule
 (targets c_flags.sexp c_library_flags.sexp c_flags.lines)
 (deps (:discover ../../src_config/discover.exe))
 (action (run %{discover} -system %{ocaml-config:system} -pkg gmp gmp -pkg yices yices)))

(library
 (name funptr)
 (package yices2)
 (foreign_stubs (language c) (names funptr_stubs) (flags (:include c_flags.sexp)))
 (libraries ctypes ctypes-zarith sexplib containers)
 (synopsis "libpoly bindings funptr")
)

(env (dev (flags (:standard -warn-error -A))))
