(rule
 (targets vendor_deps.stamp)
 (action (run %{project_root}/scripts/build_vendor_deps.sh
              --project-root %{project_root}
              --prefix %{env:OPAM_SWITCH_PREFIX=}
              --stamp %{targets})))

(rule
 (targets c_flags.sexp c_library_flags.sexp c_flags.lines)
 (deps vendor_deps.stamp
       (:discover ../../src_config/discover.exe))
 (action (run %{discover} -system %{ocaml-config:system}
               -vendor-root %{project_root}
               -vendor-prefix %{env:OPAM_SWITCH_PREFIX=}
               -pkg gmp gmp
               -pkg yices yices)))

(library
 (name funptr)
 (package yices2)
 (foreign_stubs (language c) (names funptr_stubs) (flags (:include c_flags.sexp)))
 (libraries ctypes ctypes-zarith sexplib containers)
 (synopsis "libpoly bindings funptr")
)

(env (dev (flags (:standard -warn-error -A))))
