 (rule
  (targets c_flags.sexp c_library_flags.sexp c_flags.lines)
  (deps (alias ../../vendor_deps)
        (:discover ../../src_config/discover.exe))
  (action (run %{discover} -system %{ocaml-config:system}
               -vendor-root %{workspace_root}
               -vendor-prefix ../../vendor_install
               -pkg gmp gmp
               -pkg yices yices)))

(library
 (name funptr)
 (package yices2)
 (foreign_stubs (language c) (names funptr_stubs) (flags (:include c_flags.sexp)))
 (libraries ctypes ctypes-zarith sexplib containers)
 (synopsis "libpoly bindings funptr")
)

(env (dev (flags (:standard -warn-error -A))))
